Fixed not being able to scroll on mobile error.

--- a/home-index-styles.css
+++ b/home-index-styles.css
@@ -4,7 +4,6 @@ background-color: #191923;
 padding: 40px;
 }
 html, body {
-scroll-behavior: smooth;
 overflow-x: hidden;
 background-color: #191923;
 }
